--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   cached_network_image: ^3.4.1
   intl: ^0.20.2
   permission_handler: ^12.0.1
+  carousel_slider: ^5.1.1
 
 dev_dependencies:
   flutter_test:
